--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.41"
+clap = "2.33.3"
+indexmap = { version = "1.6.2", features = ["serde-1"] }
+nom = "6.1.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_yaml = "0.8"
+thiserror = "1.0.25"
+tokio = { version = "1", features = ["full"] }
+toml = "0.5.8"
+warp = "0.3"
