--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.41"
-clap = "2.33.3"
+clap = "3.0.0-beta.2"
 indexmap = { version = "1.6.2", features = ["serde-1"] }
 nom = "6.1.2"
 serde = { version = "1.0", features = ["derive"] }
