--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2018"
 anyhow = "1.0.41"
 clap = "3.0.0-beta.2"
 indexmap = { version = "1.6.2", features = ["serde-1"] }
+log = "0.4.14"
 nom = "6.1.2"
+pretty_env_logger = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
