--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 anyhow = "1.0.41"
 clap = "3.0.0-beta.2"
 indexmap = { version = "1.6.2", features = ["serde-1"] }
+itertools = "0.10.3"
 log = "0.4.14"
 nom = "6.1.2"
 pretty_env_logger = "0.4.0"
