--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wireguard-rest-api-rs"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,6 +9,7 @@ edition = "2018"
 anyhow = "1.0.41"
 clap = "3.0.0-beta.2"
 eyre = "0.6.8"
+futures = "0.3.21"
 indexmap = { version = "1.6.2", features = ["serde-1"] }
 itertools = "0.10.3"
 log = "0.4.14"
